--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
       type="text/css"
       href="assets/layout/css/layout-light.css"
     />
-  </head>
-  <body>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
